--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,52 @@
 body {
+  margin: 0;
+  padding: 0;
+
   font-family: "Arial", sans-serif;
   font-size: 16px;
   color: #303846;
+  background-color: #ffffff;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+header {
+  padding-right: 10px;
+  height: 50px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header a {
+  font-weight: bold;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+nav ul {
+  display: flex;
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  margin-right: 10px;
+}
+
+pl-10 {
+  padding-left: 10px;
 }
