--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 :root {
   --header-height: 50px;
+  --form-green: #2ad3ac;
 }
 
 body {
@@ -98,10 +99,15 @@ main {
 .button {
   display: block;
   padding: 5px;
-  /* background-color: transparent; */
+  background-color: transparent;
   border: 1px solid #ffffff;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.button-form {
+  border-color: var(--form-green);
+  color: var(--form-green);
 }
 
 .wrapper-section {
@@ -111,4 +117,21 @@ main {
 
 .wrapper-text {
   width: 500px;
+}
+
+.wrapper-form {
+  margin: 0 auto;
+  width: 600px;
+}
+
+.talign-center {
+  text-align: center;
+}
+
+fieldset {
+  border: 2px solid var(--form-green);
+}
+
+legend {
+  color:var(--form-green);;
 }
