--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,10 @@ input[type="text"] {
   border-width: 1px;
 }
 
+.m-0 {
+  margin: 0;
+}
+
 .mb-10 {
   margin-bottom: 10px;
 }
@@ -236,6 +240,22 @@ input[type="text"] {
   margin-bottom: 20px;
 }
 
+.mb-18 {
+  margin-bottom: 18px;
+}
+
 .mr-15 {
   margin-right: 15px;
+}
+
+.fs-13 {
+  font-size: 13px;
+}
+
+.fs-18 {
+  font-size: 18px;
+}
+
+.fw-b {
+  font-weight: bold;
 }
