--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ a {
   color: inherit;
 }
 
-header {
+.main-header {
   padding-left: 20px;
   padding-right: 20px;
   height: var(--header-height);
@@ -30,7 +30,7 @@ header {
   flex-grow: 1;
 }
 
-header a {
+.main-header a {
   font-weight: bold;
 }
 
@@ -92,7 +92,7 @@ nav {
   color: #ffffff;
 }
 
-.banner {
+.intro {
   padding-top: 38px;
   padding-bottom: 29px;
 
@@ -102,14 +102,14 @@ nav {
   background-position: center;
 }
 
-.banner-headline {
+.intro-headline {
   margin: 0;
   margin-top: 15px;
   margin-bottom: 5px;
   font-size: 48px;
 }
 
-.banner-tagline {
+.intro-tagline {
   margin: 0;
   margin-bottom: 20px;
   font-size: 20px;
@@ -127,7 +127,7 @@ nav {
   font-weight: bold;
 }
 
-.button-form {
+.button-green {
   border-color: var(--form-green);
   color: var(--form-green);
   width: 160px;
