--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ main {
   background-position: center;
 }
 
-.intro-headline {
+h1 {
   margin: 0;
   margin-top: 15px;
   margin-bottom: 5px;
@@ -143,7 +143,7 @@ main {
   padding-bottom: 80px;
 }
 
-.section-headline {
+h2 {
   margin: 0;
   margin-bottom: 18px;
   font-size: 30px;
