--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,9 @@
 :root {
   --header-height: 60px;
-
   --text-primary: #303846;
-  --text-white: #ffffff;
+  --text-white: #fff;
   --text-green: #2ad3ac;
-
-
-  --bg-primary: #ffffff;
+  --bg-primary: #fff;
   --bg-grey: #f7f7f7;
   --bg-dark: #303846;
 }
@@ -15,30 +12,32 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "Arial", sans-serif;
-  font-size: 16px;
   color: var(--text-primary);
+  font-size: 16px;
+  font-family: "Arial", sans-serif;
+
   background-color: var(--bg-primary);
 }
 
 a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
 }
 
 .main-header {
-  padding-left: 20px;
-  padding-right: 20px;
-  height: var(--header-height);
-  background-color: var(--bg-primary);
   flex-grow: 1;
+  height: var(--header-height);
+  padding-right: 20px;
+  padding-left: 20px;
+
+  background-color: var(--bg-primary);
 }
 
 .fixed-on-top {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
+  left: 0;
 }
 
 .main-header a {
@@ -50,9 +49,10 @@ main {
 }
 
 .list-reset {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  list-style: none;
 }
 
 .ml-15 {
@@ -110,30 +110,34 @@ h1 {
   margin: 0;
   margin-top: 15px;
   margin-bottom: 5px;
+
   font-size: 48px;
 }
 
 .intro-tagline {
   margin: 0;
   margin-bottom: 20px;
+
   font-size: 20px;
 }
 
 .button {
   display: block;
   padding: 15px;
+
+  font-weight: bold;
   font-size: inherit;
+
   background-color: transparent;
   border: 1px solid var(--text-white);
   border-radius: 10px;
   cursor: pointer;
-
-  font-weight: bold;
 }
 
 .button-green {
-  border-color: var(--text-green);
   color: var(--text-green);
+
+  border-color: var(--text-green);
 }
 
 .w-160 {
@@ -155,11 +159,13 @@ h1 {
 h2 {
   margin: 0;
   margin-bottom: 18px;
+
   font-size: 30px;
 }
 
 .section-description {
   margin: 0;
+
   line-height: 24px;
 }
 
@@ -172,8 +178,8 @@ h2 {
 }
 
 .wrapper-form {
-  margin: 0 auto;
   width: 600px;
+  margin: 0 auto;
   padding-top: 65px;
   padding-bottom: 80px;
 }
@@ -183,8 +189,8 @@ h2 {
 }
 
 .form-request {
-  margin: 0 auto;
   width: 460px;
+  margin: 0 auto;
 }
 
 .mb-40 {
@@ -194,14 +200,16 @@ h2 {
 fieldset {
   margin: 0;
   padding: 0 20px;
+
   border: 2px solid var(--text-green);
 }
 
 legend {
   margin-bottom: 20px;
-  font-size: 22px;
-  font-weight: bold;
+
   color: var(--text-green);
+  font-weight: bold;
+  font-size: 22px;
 }
 
 form label {
@@ -214,18 +222,20 @@ form label {
 
 select {
   box-sizing: border-box;
-  padding: 8px;
   width: 150px;
-  border-radius: 10px;
+  padding: 8px;
+
   background-color: var(--bg-primary);
+  border-radius: 10px;
 }
 
 input[type="text"] {
   box-sizing: border-box;
-  padding: 6px;
   width: 200px;
-  border-radius: 10px;
+  padding: 6px;
+
   border-width: 1px;
+  border-radius: 10px;
 }
 
 .m-0 {
